--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,7 @@ timezone: Asia/Singapore
 future: true
 theme: minima
 exclude:
-  - _posts/2021-11*
-  - _posts/2021-10*
-  - _posts/2021-0*
+  - _posts/2021*
   - _posts/2020*
   - _posts/201*
 paginate: 50
