--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ timezone: Asia/Singapore
 future: true
 theme: minima
 exclude:
+  - _posts/2022-02*
   - _posts/2022-01*
   - _posts/2021*
   - _posts/2020*
