--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -1,3 +1,9 @@
+- name: 22.Q2
+  repo: https://gitlab.com/agora0/pen/22q2
+  site: https://agora0.gitlab.io/pen/22q2
+- name: 22.Q1
+  repo: https://gitlab.com/agora0/pen/22q1
+  site: https://agora0.gitlab.io/pen/22q1
 - name: 21.Q4
   repo: https://gitlab.com/agora0/pen/21q4
   site: https://agora0.gitlab.io/pen/21q4
