--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ timezone: Asia/Singapore
 future: true
 theme: minima
 exclude:
+  - _posts/2022-06*
   - _posts/2022-05*
   - _posts/2022-04*
   - _posts/2022-03*
