--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -1,3 +1,6 @@
+- name: 22.Q3
+  repo: https://gitlab.com/agora0/pen/22q3
+  site: https://agora0.gitlab.io/pen/22q3
 - name: 22.Q2
   repo: https://gitlab.com/agora0/pen/22q2
   site: https://agora0.gitlab.io/pen/22q2
