--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 零博客
 description: >- # this means to ignore newlines until "baseurl:"
   Read blog on demand.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://agora0.github.io" # the hostname & protocol, e.g. http://example.com
+url: "https://agora0.gitlab.io" # the hostname & protocol, e.g. http://example.com
 github_username: agorahub
 
 # Build settings
