--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -1,3 +1,9 @@
+- name: 23.Q1
+  repo: https://gitlab.com/agora0/pen/23q1
+  site: https://agora0.gitlab.io/pen/23q1
+- name: 22.Q4
+  repo: https://gitlab.com/agora0/pen/22q4
+  site: https://agora0.gitlab.io/pen/22q4
 - name: 22.Q3
   repo: https://gitlab.com/agora0/pen/22q3
   site: https://agora0.gitlab.io/pen/22q3
