--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,8 @@ timezone: Asia/Singapore
 future: true
 theme: minima
 exclude:
-  - _posts/2022-11*
-  - _posts/2022-10*
-  - _posts/2022-0*
+  - _posts/2023-01*
+  - _posts/2022*
   - _posts/2021*
   - _posts/2020*
   - _posts/201*
